<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="posts_title">Posts</string>
    <string name="posts_error">Posts could not be loaded.</string>
    <string name="posts_retry">Retry</string>
    <string name="posts_empty">No posts left.</string>
    <string name="post_deleted">Post deleted</string>
    <string name="post_undo">Undo</string>
    <string name="post_detail_title">Edit post</string>
    <string name="post_field_title">Title</string>
    <string name="post_field_body">Description</string>
    <string name="post_save">Save</string>
    <string name="post_title_required">Title cannot be empty</string>
    <string name="post_back">Back</string>
    <string name="posts_open_compose">Open Compose mirror</string>
</resources>
